mengubah dan menambahkan pada branch main

--- a/repo-2.html
+++ b/repo-2.html
@@ -10,7 +10,11 @@
     <h1>Data Mahasiswa</h1>
 
     <ul>
-        <li>ALeks</li>
+        <h4>Mahasiswa ke 1 :</h4>
+        <li> Nama : ALeks</li>
+        <li>Jurusan : Prodek</li>
     </ul>
+
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Pariatur, voluptatem.</p>
 </body>
 </html>
